2010-11-14  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (graphics_object::get_ancestor): New method.
	* graphics.cc (graphics_object::get_ancestor): Likewise.
	(convert_text_position, convert_cdata): Use it.
	(xget_ancestor): Remove obsolete function.
	* DLD_FUNCTIONS/fltk_backend.cc (plot_window::uimenu_update,
	fltk_backend::update): Replace xget_ancestor with
	graphics_objects::get_ancestor.

2010-11-13  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (figure::properties::filename): Make writable.
	Bug #31450.

2010-11-12  John W. Eaton  <jwe@octave.org>

	* Makefile.am (nodist_liboctinterp_la_SOURCES): Remove
	$(OPT_HANDLERS) from  the  list.  Bug #31623.

2010-11-11  John W. Eaton  <jwe@octave.org>

	* data.cc: New tests for cat.  Enable 4 asserts that were disabled.

2010-11-11  Kai Habel  <kai.habel@gmx.de>

	* fltk-backend.cc (plot_window::uimenu_update,
	fltk_backend::update): Add prefix 'ID_' to property ids to avoid
	name clash on windows systems.
	* graphics.cc (gnuplot_backend::update): Ditto.
	* genprops.awk (emit_declarations, emit_source): Ditto.

2010-11-11  John W. Eaton  <jwe@octave.org>

	Bug #31165.

	* symtab.h (symbol_table::parent_classes): New static function.
	* symtab.cc (out_of_date_check): Also look for methods defined
	in parent classes of dispatch_type.
	(symbol_table::fcn_info::fcn_info_rep::load_class_method): Call
	parent_classes instead of accessing parent_map directly.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* octave.cc (octave_main): Call octave_ieee_init here.
	* sysdep.cc (sysdep_init): Not here.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* sysdep.cc: Eliminate special case for __DECCXX.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* sysdep.cc (sysdep_init): Eliminate special case for NeXT systems.
	(malloc_handler, NeXT_init): Delete.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* sighandlers.cc (MAYBE_ACK_SIGNAL): Delete macro and all uses.